# coursework_parser_for_websites

./: README.md  main.py  pyproject.toml  vacancies_for_you.json
src/: api.py  working_with_data.py  working_with_vacancies.py
