[tool.poetry]
name = "coursework-parser-for-websites"
version = "0.1.0"
description = ""
authors = ["Andrey Mezentsev <mezentsew@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
mypy = "^1.7.1"
black = "^23.12.0"
isort = "^5.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
warn_return_any = true
exclude = '.venv'

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs         # исключить несколько общих каталогов в
    | \.git          # корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # также отдельно исключить файл с именем foo.py в
                     # корне проекта
)
'''

[tool.isort]
line_length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
